--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,8 @@
 	<title>Akshita and Mama's first Website</title>
 </head>
 <body>
-<h1>Thank you mama</h1>
-</body>
+<h1>Thank you mama 2 you</h1>
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3001/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
+//]]></script></body>
 </html>
