--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,8 @@
 	<title>Akshita and Mama's first Website</title>
 </head>
 <body>
-<h1>Thank you mama 2 you</h1>
-<script id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3001/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
-//]]></script></body>
+<h1>CARTOONs</h1>
+<p1>I love the all the carttoons on T.V </p1>
+<p2>i love carrecters like doremon ,sinchan, motu patlu,oggy and cocroches etc</p2>
+</body>
 </html>
