--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,9 @@
 	<title>Akshita and Mama's first Website</title>
 </head>
 <body>
-<h1>CARTOONs</h1>
+<h1>Play time</h1>
 <p1>I love the all the carttoons on T.V </p1>
 <p2>i love carrecters like doremon ,sinchan, motu patlu,oggy and cocroches etc</p2>
+<h2>me and my sister also warch gajju bhai and other movies yesterday we watched Meet the robbin sons my favroite cartoon is Doremon and my sister's favorite cartoon is Sinchan my cosin brothers loves wathing motu patlu on t.V my mother and my meternal uncle used to play with vedio games. my metarnal uncle and i also used to play tent house me and my sister anlso play with a tent house but it is foldable i love playing and watching i also watch educational thing like mahapeet tarapth mahabharata and ramayana 'my favroite book is chacha chawdhari and hatim tai this is my firt wedsite so i want to make it memorable lots of thanks to mama 😀😀😀 bye' </h2>
 </body>
 </html>
