--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>MY FRIENDS</h1>
 <h2>I love to play with my friends  </h2>
-<h3>There is a saying i book is equal to a friend but i good friend is equal to a whole library 📖 📖🖊🖋🖋</h3>
+<h3>There is a saying 1 book is equal to a friend but i good friend is equal to a whole library 📖 📖🖊🖋🖋</h3>
 <h4>My best friend is SANOJA and my sisters's best friend is RISHIKA
 we love and respect our friends very much thanks 😀😀😀 bye' </h3>
 </body>
