--- a/site/index.html
+++ b/site/index.html
@@ -4,10 +4,12 @@
 	<title>Akshita and Mama's first Website</title>
 </head>
 <body>
-<h1>MY FRIENDS</h1>
+<h1>ME AND MY METERNAL UNCLE</h1>
 <h2>I love to play with my friends  </h2>
 <h3>There is a saying 1 book is equal to a friend but 1 good friend is equal to a whole library 📖 📖🖊🖋🖋</h3>
 <h4>My best friend is SANOJA and my sisters's best friend is RISHIKA
 we love and respect our friends very much thanks 😀😀😀 bye' </h3>
+
+<p onclick="alert('DANGEROUS GAME ')"> GAME TIME 👿 </p>
 </body>
 </html>
