--- a/site/index.html
+++ b/site/index.html
@@ -12,5 +12,5 @@ we love and respect our friends very much thanks 😀😀😀 bye' </h3>
 
 <p onclick="alert('DANGEROUS GAME ')"> GAME TIME 👿 </p>
 </body>
-<h1 style="color:gold; font-size: 90px; text-align:center;"></h1>
+<h1 style="color:green; font-size: 90px; text-align:center;"></h1>
 </html>
